--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,25 +1,37 @@
 [package]
 name = "keyboard-counter"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 anyhow = "1.0.68"
 font-kit = "0.10"
 minifb = "0.23.0"
 raqote = "0.8.1"
+bincode = "1.3.3"
+bzip2 = "0.4.3"
+chrono = "0.4.23"
+num_enum = "0.5.7"
+once_cell = "1.16.0"
+tray-icon = "0.1.1"
+directories = "4.0.1"
+serde = { version = "1.0", features = ["derive"] }
+pathfinder_geometry = "0.5.1"
+wfd = "0.1.7"
+
 [dependencies.windows]
 version = "0.43.0"
 features = [
     "Win32_UI_WindowsAndMessaging",
-    "Win32_Foundation"
+    "Win32_Foundation",
+    "Win32_UI_Shell",
 ]
 
 [build-dependencies]
 winres = "0.1"
 anyhow = "1.0.68"
+bzip2 = "0.4.3"
+image = { version = "0.24.5", default-features = false, features = ["png"] }
 
 [profile.release]
 opt-level = "z" 
